--- a/config/config
+++ b/config/config
@@ -16,6 +16,9 @@ PATH="$NATIVE_SYSROOT/usr/bin:$PATH"
 # Set number of parallel make jobs
 JOBS=`cat /proc/cpuinfo | grep processor | wc -l`
 
+# Kernel version
+KERNEL_VERSION=3.8.13
+
 # Pkg-config cross configuration
 if [ "$BUILD_TYPE" = "cross" ]; then
    export PKG_CONFIG_DIR=
